# dsa

./: .clang-format  .gitignore  LICENSE  Makefile  README.md  config.h.in  meson.build  meson.options
.github/workflows/: ci_meson.yml
benchmarks/: list_ref_fill_and_clean.c  meson.build
doc/: Doxyfile.in  meson.build
include/: binarytree.h  btree_ref.h  circular_buffer.h  compare.h  dist_type.h  dynarray.h  errors.h  fixed_xifo_view.h  graph.h  graph_list.h  graph_mat.h  heap_view.h  list.h  list_ref.h  malloc_fail_macro.h  meson.build  ptr.h  queue.h  stack_view.h  structures.h  test_macros.h  weight_type.h
include/btree_ref/: avl_tree_ref.h  btree_ref.h  path.h
include/graph/: graph_cast.h  graph_list.h  graph_mat.h
include/list_ref/: algorithms.h  list_ref.h
src/: binarytree.c  btree_ref.c  circular_buffer.c  dynarray.c  graph.c  graph_list.c  graph_mat.c  heap_view.c  list.c  list_ref.c  main.c  meson.build  ptr.c  queue.c
src/btree_ref/: avl_tree_ref.c  btree_ref.c  path.c
src/graph/: graph_cast.c  graph_list.c  graph_mat.c
src/list_ref/: algorithms.c  list_ref.c
tests/: btree_create_empty.c  btree_emplace_at_override.c  btree_emplace_at_root.c  btree_emplace_at_several.c  btree_emplace_fail_no_root.c  btree_emplace_path_begin_to_end.c  btree_emplace_path_offset_to_end.c  btree_emplace_path_offset_to_length.c  btree_height.c  btree_inorder_traversal_of_perfect_tree.c  btree_levelorder_traversal_of_perfect_tree.c  btree_no_free_element.c  btree_node_to_path_node.c  btree_node_to_path_root.c  btree_perfect_tree_from_tab.c  btree_perfect_tree_from_tab_null_length.c  btree_postorder_traversal_of_perfect_tree.c  btree_preorder_traversal_of_perfect_tree.c  graph_mat_bellman_unit_weights.c  graph_mat_bfs.c  graph_mat_dijkstra_unit_weights.c  graph_mat_indegree.c  graph_mat_outdegree.c  graph_mat_postorder_dfs.c  graph_mat_preorder_dfs.c  graph_mat_set_get_edge.c  graph_mat_topological_ordering.c  graph_mat_topological_ordering_cycle.c  list_clean.c  list_create_empty.c  list_find_in.c  list_find_not_in.c  list_from_tab.c  list_insert_back.c  list_insert_even.c  list_insert_null.c  list_no_free_element.c  list_pop_back_to_empty.c  list_pop_front_to_empty.c  list_push_and_pop_back.c  (+11 more)
tests/avl_tree_ref/: avl_tree_ref_create_empty.c  avl_tree_ref_find.c  avl_tree_ref_insert.c  avl_tree_ref_insert_found.c  avl_tree_ref_insert_remove_root.c  avl_tree_ref_insert_root.c  avl_tree_ref_max.c  avl_tree_ref_min.c  avl_tree_ref_remove.c  avl_tree_ref_remove_ls.c  avl_tree_ref_remove_rs.c  meson.build
tests/btree_ref/: btree_ref_emplace_at_root.c  btree_ref_emplace_path_begin_to_end.c  btree_ref_emplace_path_offset_to_end.c  btree_ref_emplace_path_offset_to_length.c  btree_ref_emplace_path_override.c  btree_ref_height.c  btree_ref_inorder_traversal_of_perfect_tree.c  btree_ref_node_to_path_node.c  btree_ref_perfect_tree_from_tab_null_length.c  btree_ref_postorder_traversal_of_perfect_tree.c  btree_ref_preorder_traversal_of_perfect_tree.c  meson.build
tests/circular_buffer/: circular_buffer_create_empty.c  circular_buffer_push_back_to_full.c  circular_buffer_push_front_to_full.c  circular_buffer_stack_back.c  circular_buffer_stack_front.c  meson.build
tests/dynarray/: dynarray_create_empty.c  dynarray_push_back.c  dynarray_push_front.c  dynarray_queue.c  dynarray_stack.c  meson.build
tests/graph_list/: graph_list_bellman_negative_weights.c  graph_list_bellman_negative_weights_no_dag.c  graph_list_bellman_unit_weights.c  graph_list_bfs.c  graph_list_create_no_edges.c  graph_list_dijkstra_unit_weights.c  graph_list_ford_absorbing_circuit.c  graph_list_ford_dantzig_absorbing_circuit.c  graph_list_ford_dantzig_negative_weights_no_dag.c  graph_list_ford_negative_weights_no_dag.c  graph_list_indegree.c  graph_list_outdegree.c  graph_list_postorder_dfs.c  graph_list_preorder_dfs.c  graph_list_set_get_edge.c  meson.build
tests/graph_mat/: graph_mat_bellman_negative_weights.c  graph_mat_bellman_negative_weights_no_dag.c  graph_mat_bellman_unit_weights.c  graph_mat_bfs.c  graph_mat_create_no_edges.c  graph_mat_dijkstra_unit_weights.c  graph_mat_ford_absorbing_circuit.c  graph_mat_ford_dantzig_absorbing_circuit.c  graph_mat_ford_dantzig_negative_weights_no_dag.c  graph_mat_ford_negative_weights_no_dag.c  graph_mat_indegree.c  graph_mat_outdegree.c  graph_mat_postorder_dfs.c  graph_mat_preorder_dfs.c  graph_mat_set_get_edge.c  graph_mat_topological_ordering.c  graph_mat_topological_ordering_cycle.c  meson.build
tests/heap_view/: heap_view_create_empty.c  heap_view_get_root_to_empty.c  heap_view_heap_from_array.c  heap_view_insert.c  heap_view_insert_and_get_root.c  heap_view_update_up.c  meson.build
tests/list_ref/: list_ref_append_back.c  list_ref_append_front.c  list_ref_create_empty.c  list_ref_push_and_pop_back.c  list_ref_transform_square.c  meson.build  tab_from_list.c
tests/path/: meson.build  path_append_branch.c  path_append_lhs_rhs.c
