header_files = files(
  'btree_ref/btree_ref.h',
  'btree_ref/path.h',
  'graph/graph_cast.h',
  'graph/graph_list.h',
  'graph/graph_mat.h',
  'list_ref/list_ref.h',
  'list_ref/algorithms.h',
  'circular_buffer.h',
  'compare.h',
  'errors.h',
  'heap_view.h',
  'ptr.h',
  'structures.h',
  'test_macros.h',
  'weight_type.h',
)

install_headers(header_files, subdir: meson.project_name())
