passing_test_sources = [
  'avl_tree_ref_create_empty.c',
  'avl_tree_ref_find.c',
  'avl_tree_ref_insert.c',
  'avl_tree_ref_insert_found.c',
  'avl_tree_ref_insert_root.c',
  'avl_tree_ref_insert_remove_root.c',
  'avl_tree_ref_max.c',
  'avl_tree_ref_min.c',
  'avl_tree_ref_remove.c',
  'avl_tree_ref_remove_ls.c',
  'avl_tree_ref_remove_rs.c',
]
