passing_test_sources = [
  'btree_ref_create_empty.c',
  'btree_ref_emplace_at_override.c',
  'btree_ref_emplace_at_root.c',
  'btree_ref_emplace_at_several.c',
  'btree_ref_emplace_fail_no_root.c',
  'btree_ref_emplace_path_begin_to_end.c',
  'btree_ref_emplace_path_offset_to_end.c',
  'btree_ref_emplace_path_offset_to_length.c',
  'btree_ref_height.c',
  'btree_ref_inorder_traversal_of_perfect_tree.c',
  'btree_ref_levelorder_traversal_of_perfect_tree.c',
  'btree_ref_no_free_element.c',
  'btree_ref_node_to_path_node.c',
  'btree_ref_node_to_path_root.c',
  'btree_ref_perfect_tree_from_tab.c',
  'btree_ref_perfect_tree_from_tab_null_length.c',
  'btree_ref_postorder_traversal_of_perfect_tree.c',
  'btree_ref_preorder_traversal_of_perfect_tree.c',
]
