passing_test_sources = [
  'graph_list_bellman_unit_weights.c',
  'graph_list_bfs.c',
  'graph_list_create_no_edges.c',
  'graph_list_dijkstra_unit_weights.c',
  'graph_list_indegree.c',
  'graph_list_outdegree.c',
  'graph_list_set_get_edge.c',
  'graph_list_postorder_dfs.c',
  'graph_list_preorder_dfs.c',
]
