passing_test_sources = [
  'graph_mat_bellman_negative_weights.c',
  'graph_mat_bellman_unit_weights.c',
  'graph_mat_bfs.c',
  'graph_mat_create_no_edges.c',
  'graph_mat_dijkstra_unit_weights.c',
  'graph_mat_indegree.c',
  'graph_mat_outdegree.c',
  'graph_mat_postorder_dfs.c',
  'graph_mat_preorder_dfs.c',
  'graph_mat_set_get_edge.c',
  'graph_mat_topological_ordering.c',
  'graph_mat_topological_ordering_cycle.c',
]
