passing_test_sources = [
  'list_ref_clean.c',
  'list_ref_create_empty.c',
  'list_ref_find_in.c',
  'list_ref_find_not_in.c',
  'list_ref_from_tab.c',
  'list_ref_insert_back.c',
  'list_ref_insert_even.c',
  'list_ref_insert_null.c',
  'list_ref_no_free_element.c',
  'list_ref_push_back.c',
  'list_ref_push_front.c',
  'list_ref_push_and_pop_back.c',
  'list_ref_push_and_pop_front.c',
  'list_ref_pop_back_to_empty.c',
  'list_ref_pop_front_to_empty.c',
  'list_ref_remove_back_to_empty.c',
  'list_ref_remove_even.c',
  'list_ref_remove_front_to_empty.c',
  'list_ref_transform_square.c',
  'tab_from_list.c',
]
